--- a/templates/player.html
+++ b/templates/player.html
@@ -1,32 +1,21 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <title>List of players</title>
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@600&display=swap"
-      rel="stylesheet"
-    />
-    <style>
-      body {
-        font-family: "Roboto", sans-serif;
-      }
-      .red-background {
-        background-color: rgb(213, 41, 41);
-      }
-    </style>
-  </head>
-  <body>
-    <ul>
-      {% for i in data %}
-      <li class="red-background">
-        <h3>{{ i["name"] }}</h3>
-        <h3>{{i["rating"]}}</h3>
-        <h4>{{i["description"]}}</h4>
-      </li>
+{% extends 'base.html' %}
 
-      {% endfor %}
-    </ul>
-  </body>
-</html>
+{% block title %}List of Players{% endblock %}
+
+{% block content %}
+    <div class="card-container">
+        {% for i in data %}
+            <div class="card red-background mb-3 animate__animated animate__fadeInUp">
+                <div class="card-header">
+                    <h3 class="card-title">
+                        {{ i["name"] }} <span class="font-weight-bold">{{ i["rating"] }}</span>
+                    </h3>
+                </div>
+                <div class="card-body">
+                    <p class="card-text">{{i["description"]}}</p>
+                </div>
+            </div>
+        {% endfor %}
+    </div>
+{% endblock %}
+
